[package]
name = "untitled10"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.96" }
async-channel = { version = "2.1" }
clap = { version = "4.5.30", features = ["derive"] }
futures-util = { version = "0.3" }
tokio = { version = "1.0", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-tungstenite = "0.26.2"
tungstenite = "0.26.2"
futures = "0.3.31"
log = "0.4.26"
env_logger = "0.11.6"
rand = "0.9.0"
unicode-segmentation = "1.12.0"
rand_chacha = "0.9.0"
hex = "0.4.3"
warp = { version = "0.3.7", features = ["tls"] }
tokio-rustls = "0.26.1"
rustls = { version =  "0.23.23", features = ["ring","logging","tls12"] }
openssl = { version = "0.10.71", features = ["vendored"] }
acme2 = "0.5.1"
tokio-rustls-acme = "0.6.0"
tokio-stream = { version = "0.1.17", features = ["net"] }
axum = { version =  "0.8.1", features = ["macros"] }
axum-server = { version =  "0.7.1", features = ["tls-rustls"] }
ring = "0.17.10"
base64 = "0.22.1"
chrono = { version = "0.4.39", features = ["clock"] }
timer = "0.2.0"
rusqlite = { version = "0.33.0", features = ["bundled"] }
argon2 = "0.5.3"
tokio-rusqlite-new = "0.7.0"