[package]
name = "untitled10"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.97" }
futures-util = { version = "0.3" }
tokio = { version = "1.44.1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-tungstenite = { version =  "0.26.2", features = ["rustls", "rustls-tls-webpki-roots"] }
tungstenite = "0.26.2"
log = "0.4.27"
rand = "0.9.0"
rand_chacha = "0.9.0"
tokio-rustls = "0.26.2"
rustls = { version =  "0.23.25", features = ["ring", "logging", "tls12"] }
chrono = { version = "0.4.40", features = ["clock"] }
rusqlite = { version = "0.35.0", features = ["bundled", "chrono"] }
argon2 = { version = "0.5.3", features = ["std"] }
serde_json = "1.0.140"
serde-email = "3.1.0"
serde = { version = "1.0.219", features = ["derive"] }
creditcard = "0.1.0"
regex = "1.11.1"